cabal-version: 3.0

name:                   cardano-submit-api
version:                3.1.8
synopsis:               A web server that allows transactions to be POSTed to the cardano chain
description:            A web server that allows transactions to be POSTed to the cardano chain.
homepage:               https://github.com/input-output-hk/cardano-node
bug-reports:            https://github.com/input-output-hk/cardano-node/issues
license:                Apache-2.0
license-files:          LICENSE
                        NOTICE
copyright:              2019-2023 Input Output Global Inc (IOG).
author:                 IOHK Engineering Team
maintainer:             operations@iohk.io
category:               Cardano,
                        Web,
build-type:             Simple
extra-source-files:     CHANGELOG.md

common project-config
  default-language:     Haskell2010
  build-depends:        base >= 4.14 && < 5

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wno-all-missed-specialisations
                        -Wno-missing-import-lists
                        -Wno-safe
                        -Wno-unsafe
                        -Wunused-packages
                        -fwarn-incomplete-patterns
                        -fwarn-redundant-constraints

library
  import:               project-config
  build-depends:        base
                      , aeson
                      , async
                      , bytestring
                      , cardano-api ^>= 8.29
                      , cardano-binary
                      , cardano-cli ^>= 8.13
                      , cardano-crypto-class ^>= 2.1.2
                      , cardano-ledger-byron ^>= 1.0
                      , formatting
                      , http-media
                      , iohk-monitoring
                      , mtl
                      , network
                      , optparse-applicative-fork
                      , ouroboros-consensus-cardano
                      , ouroboros-network ^>= 0.9.1
                      , ouroboros-network-protocols
                      , prometheus >= 2.2.4
                      , servant
                      , servant-server
                      , streaming-commons
                      , text
                      , transformers-except
                      , warp
                      , yaml

  hs-source-dirs:       src

  exposed-modules:      Cardano.TxSubmit

  other-modules:        Cardano.TxSubmit.CLI.Parsers
                      , Cardano.TxSubmit.CLI.Types
                      , Cardano.TxSubmit.Config
                      , Cardano.TxSubmit.ErrorRender
                      , Cardano.TxSubmit.Metrics
                      , Cardano.TxSubmit.Rest.Parsers
                      , Cardano.TxSubmit.Rest.Types
                      , Cardano.TxSubmit.Rest.Web
                      , Cardano.TxSubmit.Tracing.ToObjectOrphans
                      , Cardano.TxSubmit.Types
                      , Cardano.TxSubmit.Util
                      , Cardano.TxSubmit.Web

executable cardano-submit-api
  import:               project-config
  main-is:              Main.hs
  hs-source-dirs:       app
  ghc-options:          -threaded -rtsopts "-with-rtsopts=-T -I0"
  build-depends:        base
                      , optparse-applicative-fork
                      , cardano-cli
                      , cardano-crypto-class
                      , cardano-submit-api

test-suite unit
  import:               project-config
  type:                 exitcode-stdio-1.0
  main-is:              test.hs
  hs-source-dirs:       test
  build-depends:        base
                      , cardano-crypto-class ^>= 2.1.2
