cabal-version: 3.0

name:                   cardano-testnet
version:                9.0.0
synopsis:               The cardano full node
description:            The cardano full node.
copyright:              2021-2023 Input Output Global Inc (IOG), 2023-2024 Intersect.
author:                 IOHK
maintainer:             operations@iohk.io
category:               Cardano,
                        Test,
license:                Apache-2.0
license-files:          LICENSE
                        NOTICE
build-type:             Simple
extra-doc-files:        CHANGELOG.md

common project-config
  default-language:     Haskell2010
  build-depends:        base >= 4.14 && < 5

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wno-unticked-promoted-constructors
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

library
  import:               project-config

  build-depends:        aeson
                      , aeson-pretty
                      , ansi-terminal
                      , bytestring
                      , cardano-api ^>= 9.0
                      , cardano-cli ^>= 9.0
                      , cardano-crypto-class
                      , cardano-crypto-wrapper
                      , cardano-git-rev ^>= 0.2.2
                      , cardano-ledger-alonzo
                      , cardano-ledger-binary
                      , cardano-ledger-byron
                      , cardano-ledger-conway
                      , cardano-ledger-api
                      , cardano-ledger-conway
                      , cardano-ledger-core:{cardano-ledger-core, testlib}
                      , cardano-ledger-shelley
                      , cardano-node
                      , cardano-ping ^>= 0.2.0.13
                      , contra-tracer
                      , containers
                      , data-default-class
                      , cborg
                      , containers
                      , contra-tracer
                      , data-default-class
                      , Diff
                      , directory
                      , exceptions
                      , filepath
                      , hedgehog
                      , hedgehog-extras ^>= 0.6.4
                      , lens-aeson
                      , microlens
                      , mtl
                      , network
                      , network-mux
                      , optparse-applicative-fork
                      , ouroboros-network ^>= 0.16.1
                      , ouroboros-network-api
                      , prettyprinter
                      , process
                      , random
                      , resourcet
                      , safe-exceptions
                      , scientific
                      , si-timers
                      , stm
                      , tasty ^>= 1.5
                      , tasty-expected-failure
                      , tasty-hedgehog
                      , text
                      , time
                      , transformers
                      , transformers-except
                      , vector

  hs-source-dirs:       src
  exposed-modules:      Cardano.Testnet
                        Parsers.Run
                        Testnet.Components.Configuration
                        Testnet.Components.Query
                        Testnet.Defaults
                        Testnet.EpochStateProcessing
                        Testnet.Filepath
                        Testnet.Ping
                        Testnet.Process.Cli.DRep
                        Testnet.Process.Cli.Keys
                        Testnet.Process.Cli.SPO
                        Testnet.Process.Cli.Transaction
                        Testnet.Process.Run
                        Testnet.Property.Assert
                        Testnet.Property.Run
                        Testnet.Property.Util
                        Testnet.Runtime
                        Testnet.Start.Byron
                        Testnet.Start.Types
                        Testnet.SubmitApi
                        Testnet.Types

  other-modules:        Parsers.Cardano
                        Parsers.Help
                        Parsers.Version
                        Testnet.Start.Cardano
                        Paths_cardano_testnet

  autogen-modules:      Paths_cardano_testnet



executable cardano-testnet
  import:               project-config

  hs-source-dirs:       app

  main-is:              cardano-testnet.hs

  build-depends:        cardano-crypto-class
                      , cardano-cli
                      , cardano-testnet
                      , optparse-applicative-fork

  ghc-options:          -threaded -rtsopts "-with-rtsopts=-N -T"

test-suite cardano-testnet-golden
  import:               project-config

  hs-source-dirs:       test/cardano-testnet-golden

  main-is:              cardano-testnet-golden.hs

  other-modules:        Cardano.Testnet.Test.Golden.Config
                        Cardano.Testnet.Test.Golden.Help
                        Cardano.Testnet.Test.Golden.Util

  type:                 exitcode-stdio-1.0

  build-depends:        aeson
                      , aeson-pretty
                      , bytestring
                      , cardano-api
                      , cardano-crypto-class
                      , cardano-testnet
                      , exceptions
                      , filepath
                      , hedgehog
                      , hedgehog-extras
                      , process
                      , regex-compat
                      , tasty ^>= 1.5
                      , tasty-hedgehog
                      , text

  ghc-options:          -threaded -rtsopts "-with-rtsopts=-N -T"

  build-tool-depends:   cardano-node:cardano-node
                      , cardano-cli:cardano-cli
                      , cardano-submit-api:cardano-submit-api
                      , cardano-testnet:cardano-testnet

test-suite cardano-testnet-test
  import:               project-config

  hs-source-dirs:       test/cardano-testnet-test

  main-is:              cardano-testnet-test.hs

  other-modules:        Cardano.Testnet.Test.Cli.Babbage.LeadershipSchedule
                        Cardano.Testnet.Test.Cli.Babbage.StakeSnapshot
                        Cardano.Testnet.Test.Cli.Babbage.Transaction
                        Cardano.Testnet.Test.Cli.Conway.Plutus
                        Cardano.Testnet.Test.Cli.Conway.StakeSnapshot
                        Cardano.Testnet.Test.Cli.KesPeriodInfo
                        Cardano.Testnet.Test.Cli.Query
                        Cardano.Testnet.Test.Cli.QuerySlotNumber
                        Cardano.Testnet.Test.FoldEpochState
                        Cardano.Testnet.Test.Gov.CommitteeAddNew
                        Cardano.Testnet.Test.Gov.DRepActivity
                        Cardano.Testnet.Test.Gov.DRepDeposit
                        Cardano.Testnet.Test.Gov.DRepRetirement
                        Cardano.Testnet.Test.Gov.InfoAction
                        Cardano.Testnet.Test.Gov.NoConfidence
                        Cardano.Testnet.Test.Gov.PParamChangeFailsSPO
                        Cardano.Testnet.Test.Gov.ProposeNewConstitution
                        Cardano.Testnet.Test.Gov.ProposeNewConstitutionSPO
                        Cardano.Testnet.Test.Gov.GovActionTimeout
                        Cardano.Testnet.Test.Gov.TreasuryGrowth
                        Cardano.Testnet.Test.Gov.TreasuryWithdrawal
                        Cardano.Testnet.Test.Misc
                        Cardano.Testnet.Test.Gov.DRepActivity
                        Cardano.Testnet.Test.Gov.PredefinedAbstainDRep
                        Cardano.Testnet.Test.Node.Shutdown
                        Cardano.Testnet.Test.SanityCheck
                        Cardano.Testnet.Test.SubmitApi.Babbage.Transaction

  type:                 exitcode-stdio-1.0

  build-depends:        aeson
                      , aeson-pretty
                      , async
                      , base16-bytestring
                      , bytestring
                      , cardano-api:{cardano-api, internal}
                      , cardano-cli
                      , cardano-crypto-class
                      , cardano-ledger-conway
                      , cardano-ledger-core
                      , cardano-ledger-shelley
                      , cardano-node
                      , cardano-slotting
                      , cardano-strict-containers ^>= 0.1
                      , cardano-testnet
                      , containers
                      , directory
                      , exceptions
                      , filepath
                      , hedgehog
                      , hedgehog-extras
                      , http-conduit
                      , lens-aeson
                      , microlens
                      , mtl
                      , process
                      , regex-compat
                      , tasty ^>= 1.5
                      , text
                      , time
                      , transformers
                      , vector

  ghc-options:          -threaded -rtsopts "-with-rtsopts=-N -T"

  build-tool-depends:   cardano-node:cardano-node
                      , cardano-cli:cardano-cli
                      , cardano-submit-api:cardano-submit-api
                      , cardano-testnet:cardano-testnet
